--- a/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_M_HTML.html
+++ b/src/main/resources/html/TZApplicationSurveyBundle/TZ_SURVEY_PAGE_M_HTML.html
@@ -2,13 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
 		<title>%bind(:13)</title>
 		<link href="%bind(:21)/statics/js/onlineSurvey/css/m/public.css" rel="stylesheet" type="text/css" />
 		<link href="%bind(:21)/statics/js/onlineSurvey/css/m/index.css" rel="stylesheet" type="text/css" />
-        <link href="%bind(:21)/statics/js/survey/assets/libs/jqueryui/css/jquery-ui-1.10.4.min.css" rel="stylesheet">
+        <link href="%bind(:21)/statics/js/survey/assets/libs/jqueryui/css/jquery-ui-1.10.4.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="%bind(:21)/statics/js/onlineSurvey/formvalidator/m/themes/Custom/style/style.css" />
-		<link rel="stylesheet" href="%bind(:21)/statics/js/survey/assets/libs/unitegallery/css/unite-gallery.css" type="text/css">
+		<link rel="stylesheet" href="%bind(:21)/statics/js/survey/assets/libs/unitegallery/css/unite-gallery.css" type="text/css"/>
 		<script type="text/javascript">
 			var TzUniversityContextPath = "%bind(:21)";
 		</script>
@@ -28,8 +28,7 @@
 		<script type="text/javascript" src="%bind(:21)/statics/js/survey/assets/js/baseComponent.js"></script>
 		<script type="text/javascript" src="%bind(:21)/statics/js/onlineSurvey/formvalidator/m/ValidationRules.js"></script>
 		<script type="text/javascript" src="%bind(:21)/statics/js/onlineSurvey/formvalidator/m/formValidator.js"></script>
-		<script type="text/javascript" src="%bind(:21)/statics/js/onlineSurvey/layer/layer.js"></script>
-		<script type="text/javascript" src="%bind(:21)/statics/js/onlineSurvey/layer/extend/layer.ext.js"></script>
+		<script type="text/javascript" src="%bind(:21)/statics/js/tranzvision/util/layer.js"></script>
 		<style>
 			.noteing{font-weight:700;text-align:center;font-size:14px;font-weight:700;position:fixed;display:none;z-index:10000;cursor:pointer;}
 			.noteing .alert{padding:8px 20px;}
@@ -101,10 +100,12 @@
 
 	<body>
 		<div class="container">
+			<!-- 不显示调试模式提醒 
 			<div class="top">
 				%bind(:14)
 				<div class="clear"></div>
 			</div>
+			 -->
 			<!-- 卷头 -->
 			<div class="uploadlogo">%bind(:1)</div>
 
@@ -123,8 +124,8 @@
 			</div>
 			<!-- 卷尾 -->
 			<div class="fotter">%bind(:2)</div>
-			<input type="hidden" id="unique" name="unique" value="%bind(:20)">
 		</div>
+		<input type="hidden" id="unique" name="unique" value="%bind(:20)"/>
 	</body>
 	<script type="text/javascript">
 
@@ -237,7 +238,10 @@
 		}
 	</script>
 	<script type="text/javascript">
-
+		function processing(){
+			var loadi = layer.load("加载中...");
+			layer.area(loadi,"top:200px");
+		}
 		//获取参与者答题内容
 		function getData(){
 			var _a = SurveyBuild["_items"];
@@ -263,7 +267,6 @@
 		//提交
 		$("#app_submit").click(function(){
 			var isValid = $.formValidator.pageIsValid();
-		    //processing();
 			if(isValid){
 				 SaveSurvey("SUBMIT");
 			}else{
@@ -272,6 +275,7 @@
 		});
 		/*保存在线调查*/
 		function SaveSurvey(cType){
+			processing();
 			if(SurveyBuild.subState == 'S'){
 				if(SurveyBuild.curPageNo == 1 || SurveyBuild.maxPage < 2){
 					$(".pagebtn1").hide();
@@ -304,31 +308,35 @@
 						SurveyBuild.appInsId = f.comContent.insid;
 						SurveyBuild.subState = f.comContent.subState;
 						if (f.comContent.code == "0") {
-						 if (cType == "SUBMIT"){
-							noteing(MsgSet.SAVE_SUCCEED);
-							var tzSuccessParams = '?tzParams={"ComID":"TZ_ZXDC_WJGL_COM","PageID":"TZ_SURVEY_SUCC_STD","OperateType":"HTML","comParams":{"AC":"M","SURVEY_WJ_ID":' + templId + '}}';
-							window.location.href = SurveyBuild.tzGeneralURL + tzSuccessParams;
-						 }else{
-							/*处理翻页数据加载*/
-							if(SurveyBuild.curPageNo == 1 || SurveyBuild.maxPage < 2){
-								$(".pagebtn1").hide();
+							if (cType == "SUBMIT"){
+								noteing(MsgSet.SAVE_SUCCEED);
+								var tzSuccessParams = '?tzParams={"ComID":"TZ_ZXDC_WJGL_COM","PageID":"TZ_SURVEY_SUCC_STD","OperateType":"HTML","comParams":{"AC":"M","SURVEY_WJ_ID":' + templId + '}}';
+								window.location.href = SurveyBuild.tzGeneralURL + tzSuccessParams;
 							}else{
-								$(".pagebtn1").show();
-							}
+								/*处理翻页数据加载*/
+								if(SurveyBuild.curPageNo == 1 || SurveyBuild.maxPage < 2){
+									$(".pagebtn1").hide();
+								}else{
+									$(".pagebtn1").show();
+								}
 
-							if(SurveyBuild.curPageNo == SurveyBuild.maxPage){
-								$(".pagebtn2").hide();
-							}else{
-								$(".pagebtn2").show();
+								if(SurveyBuild.curPageNo == SurveyBuild.maxPage){
+									$(".pagebtn2").hide();
+								}else{
+									$(".pagebtn2").show();
+								}
+								SurveyBuild._load();
+								layer.closeAll();
 							}
-							SurveyBuild._load();
-						 }
-							 noteing(MsgSet.SAVE_SUCCEED);
+							layer.closeAll();
+							noteing(MsgSet.SAVE_SUCCEED);
 						}else{
+							layer.closeAll();
 							noteing(f.comContent.msg);
 						}
 					}else{
-						 noteing(MsgSet.SAVE_FAILD + "," + f.state.errdesc);
+						layer.closeAll();
+						noteing(MsgSet.SAVE_FAILD + "," + f.state.errdesc);
 					}
                 }
             });
@@ -360,33 +368,21 @@
 				//只有一页，禁止跳转
 				return false;
 			}
-			var isValid = true;
 			if(SurveyBuild.subState != 'S'){
+				//未提交进行验证
 				var isValid = $.formValidator.pageIsValid();
-			}
-			if(isValid){
-				SurveyBuild.curPageNo = pageno;
-				SaveSurvey("SAVE");
-				
-				/*张浪注释，该部分放在保存成功之后执行，SurveyBuild._load()中需要查询保存后的数据	
-				SaveSurvey("SAVE");
-				SurveyBuild.curPageNo = pageno;
-				if(SurveyBuild.curPageNo == 1 || SurveyBuild.maxPage < 2){
-					$(".pagebtn1").hide();
+				if(isValid){
+					SurveyBuild.curPageNo = pageno;
+					SaveSurvey("SAVE");
+					refreshTip();
 				}else{
-					$(".pagebtn1").show();
+					scrollTop();
 				}
-
-				if(SurveyBuild.curPageNo == SurveyBuild.maxPage){
-					$(".pagebtn2").hide();
-				}else{
-					$(".pagebtn2").show();
-				}
-				SurveyBuild._load();
-				*/
-				refreshTip();
 			}else{
-				scrollTop();
+				//已提交页面跳转
+				SurveyBuild.curPageNo = pageno;
+				SurveyBuild._load();
+				refreshTip();
 			}
 		}
 		//是否密码安全
@@ -431,8 +427,12 @@
 				);
 			}
 		}else{
+			processing();
 			SurveyBuild._load();
 			refreshTip();
+			setTimeout(function(){
+				  layer.closeAll('loading');
+				}, 2000);
 		}
 		
 		function refreshTip(){
