活动报名字体修改

--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
@@ -13,7 +13,7 @@ input[type="text"], input[type="password"] {
 	background-color: #fff;
 	padding: 4px 6px;
 	line-height: 18px;
-	color: #555;
+	color: #666;
 	vertical-align: baseline;
 	height: 18px;
 }
@@ -62,7 +62,7 @@ body, button, input, select, textarea {
 	background-color: #fff;
 	padding: 4px 6px;
 	line-height: 18px;
-	color: #555;
+	color: #666;
 	vertical-align: baseline;
 }
 
@@ -75,6 +75,11 @@ body, button, input, select, textarea {
 .apply-items.seltype {
 	width: 335px;
 	height: 39px;
+}
+
+.apply-items.inptype,.apply-items.seltype {
+	font-size: 14px;
+	color: #666;
 }
 
 .apply-items.inptype:focus,.apply-items.seltype:focus {
