材料面试评审相关

--- a/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_GD_MSPS_PWINFO_HTML.html
+++ b/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_GD_MSPS_PWINFO_HTML.html
@@ -6,5 +6,6 @@
 	"judgeGroup":"%bind(:5)",
 	"submitYN":"%bind(:6)",
 	"accountStatus":"%bind(:7)",
-	"hasSubmited":"%bind(:8)"
+	"hasSubmited":"%bind(:8)",
+	"judgeOprID":"%bind(:9)"
 }
