--- a/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_GD_MSPS_STULIST_HTML.html
+++ b/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_GD_MSPS_STULIST_HTML.html
@@ -8,5 +8,6 @@
 	"status":"%bind(:7)",
 	"judgeNames":"%bind(:8)",
 	"progress":"%bind(:9)",
-	"viewQua":"%bind(:10)"
+	"viewQua":"%bind(:10)",
+	"oprID":"%bind(:11)"
 }
