修改预提交成功说明文字

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -1238,7 +1238,7 @@
 											$("#" + currentPageId).find(".menu-gou.right img").attr("src",TzUniversityContextPath + "/statics/images/appeditor/new/check-white.png");
 											$("#" + currentPageId).find(".menu-gou.right img").show();
 											layer.closeAll();
-											noteing(MsgSet.SAVE_SUCCEED);
+											noteing(MsgSet.PRE_SUCCEED);
 											SurveyBuild.saveTjx_fj();
 										}else{
 											/*当前页签设置为未完成*/
