--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -1244,7 +1244,7 @@
 											/*当前页签设置为未完成*/
 											$("#" + currentPageId).find(".menu-gou.right img").attr("src","");
 											$("#" + currentPageId).find(".menu-gou.right img").hide();
-											console.log("2222");
+											//console.log("2222");
 											layer.closeAll();
 											layer.alert(f.comContent.msg);
 										}
