账户管理去掉左侧多余空白

--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_MENU_ZHGL_HTML2.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_MENU_ZHGL_HTML2.html
@@ -46,7 +46,7 @@
 
 		</div> -->
 		<div class="zxj_left">
-			<div id="letf_menu" class="main_left assdiv" area-add="false" area-edit="true" area-del="false" area-copy="false" area-moveup="false" area-movedown="false" area-postion="L" area-type="ZC" area-id="" style="height:560px !important;">
+			<div id="letf_menu" class="main_left assdiv" area-add="false" area-edit="true" area-del="false" area-copy="false" area-moveup="false" area-movedown="false" area-postion="L" area-type="ZC" area-id="">
 				<div style="height:100%;border-left:3px solid #e7ceeb;padding-top:25px;margin-left: 6%;"></div>
 			</div>
 		</div>
