PC版报名中心的面试申请按钮，如果是处于灰色状态，当mouseover时，按钮上方添加一行文字，诸如“暂时未开放申请，请耐心等待...”

--- a/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_CANTNOT_APPLY.html
+++ b/src/main/resources/html/TZApplicationCenterBundle/TZ_APPCENTER_CANTNOT_APPLY.html
@@ -1,6 +1,6 @@
 <div class="zxj_tit1">%bind(:1)</div>
 <div class="zxj_mba">
-     <a href="javascript:void(0);" class="sq_btn_no">
+     <a href="javascript:void(0);" class="sq_btn_no" title="%bind(:3)">
          <div class="sq_icon">
              <i></i>
              <span>%bind(:2)</span>
