材料面试评审管理

--- a/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_GD_MSPS_STULIST_HTML.html
+++ b/src/main/resources/html/TZMaterialInterviewReviewBundle/TZ_GD_MSPS_STULIST_HTML.html
@@ -9,5 +9,6 @@
 	"judgeNames":"%bind(:8)",
 	"progress":"%bind(:9)",
 	"viewQua":"%bind(:10)",
-	"oprID":"%bind(:11)"
+	"oprID":"%bind(:11)",
+	"mshID":"%bind(:12)"
 }
