奖学金申请左侧菜单高度调整

--- a/src/main/resources/html/TZSchlrBundle/TZ_GD_SCHLR_VIEW_MAIN_HTML.html
+++ b/src/main/resources/html/TZSchlrBundle/TZ_GD_SCHLR_VIEW_MAIN_HTML.html
@@ -1,26 +1,29 @@
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></meta>
-		<title>清华MBA申请奖学金</title>
-		<link href="%bind(:1)" rel="stylesheet" type="text/css"></link>
-	    <script type="text/javascript">
-			TzUniversityContextPath = "%bind(:2)";
-		</script>
-		<script type="text/javascript" src="%bind(:2)/statics/js/lib/jquery/jquery.min.js"></script>
-		<script type="text/javascript" src="%bind(:2)/statics/js/tranzvision/extjs/app/view/website/set/js/broad/pagefunc.js"></script>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title></title>
+	<link href="%bind(:1)" rel="stylesheet" type="text/css"></link>
+	<script type="text/javascript">
+		var TzUniversityContextPath = "%bind(:2)";
+		var TZ_GD_LOGIN_SITEI_ORG_CODE = "%bind(:4)";
+		var TZ_GD_LOGIN_SITEI_ID = "%bind(:5)";
+		var TZ_GD_SITEI_ISD = "";
+	</script>
+	<script type="text/javascript" src="%bind(:2)/statics/js/lib/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="%bind(:2)/statics/js/tranzvision/extjs/app/view/website/set/js/broad/pagefunc.js"></script>
+	<script type="text/javascript"	src="%bind(:2)/statics/js/website/account/semInit.js"></script>
 	</head>
-	<body style="background:#eee;">
-		<!---  网站标题头 begin--->
-		<div id="headarea" class="top assdiv" area-add="false" area-edit="true" area-del="false" area-copy="false" area-moveup="false" area-movedown="false" area-postion="H" area-type="YT" area-id=""></div>
-		<!---  网站标题头 end--->
-		
+	<body style="background: #eee">
+		<div id="headarea" class="top assdiv" area-add="false" area-edit="true" area-del="false" area-copy="false" area-moveup="false" area-movedown="false" area-postion="H" area-type="YT" area-id=""></div>	
 		<div id="main" class="main">
 			<div class="zxj_left">
-				<div id="letf_menu" class="main_left assdiv" area-add="false" area-edit="true" area-del="false" area-copy="false" area-moveup="false" area-movedown="false" area-postion="L" area-type="ZC" area-id="" style="height:560px;">
+				<div id="letf_menu" class="main_left assdiv" area-add="false" area-edit="true" area-del="false" area-copy="false" area-moveup="false" area-movedown="false" area-postion="L" area-type="ZC" area-id="">
 					<div style="height:100%;border-left:3px solid #e7ceeb;padding-top:25px;margin-left: 6%;"></div>
 				</div>
 			</div>
-			<!-- content start -->
+			
 			<div class="main_mid_left">
 					<div class="main_tit">%bind(:3)</div>
 					<div class="mian_inner_nav" id="tab1">
@@ -34,32 +37,24 @@
 					<div id="content1">
 						<div style="display:block;" class="tab1 block">
 							<table class="table_style" style="margin-top:10px;">%bind(:6)</table>
-							<div class="padding_div_50px">
-							</div>
+							<div class="padding_div_50px"></div>
 						</div>
 						<div style="display:none;" class="tab1">
 							<table class="table_style" style="margin-top:10px;">%bind(:7)</table>
-							<div class="padding_div_50px">
-							</div>
-							<div style="clear: both;">
-							</div>
-							<!-- content end -->
+							<div class="padding_div_50px"></div>
+							<div style="clear: both;"></div>
 						</div>
 					</div>
-					<!-- content end -->
-				</div>
+			</div>
 		</div>
-		<!-- Footer Begin -->
-		<div class="footer"></div>
-		<!-- Footer End -->
+		<div id="footarea" class="foot assdiv" area-add="false"	area-edit="true" area-del="false" area-copy="false"	area-moveup="false" area-movedown="false" area-postion="F"	area-type="YW" area-id=""></div>
+		<div>
+			<input id="jgid" name="jgid" type="hidden" />
+			<input id="siteid" name="siteid" type="hidden" />
+			<input id="lang" name="lang" type="hidden" />
+		</div>
 	</body>
 	<script type="text/javascript">
-    $(document).ready(function(){
-        LoadHeader("%bind(:4)","%bind(:5)","");
-        LoadMenu("%bind(:4)","%bind(:5)","");
-        LoadFooter("%bind(:4)","%bind(:5)","");
-        LoadLeftArea("%bind(:4)","%bind(:5)","");
-    });
 		function setTab(m, n) {
 			var menu = document.getElementById("tab" + m).getElementsByTagName("li");
 			var showdiv = $("#content" + m + " .tab1");
