--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT.html
@@ -85,7 +85,8 @@ var tzGeneralURL = "%bind(:1)";
 			$("#" + clickId).val(countryDesc);
 			$("#" + clickId).attr("ccode",countryCode);
 			$("#" + clickId).html(countryDesc);
-			$("#TZ_SCH_CNAME_Country_1").html(countryDesc);
+			$("#TZ_SCH_CNAME_Country").val(countryDesc);
+			$("#TZ_SCH_CNAME_Country").css("color","#333");
 			console.log("#TZ_SCH_CNAME_Country_1");
 			console.log(countryDesc);
 			
