活动报名条修改

--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_DISPLAY.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_DISPLAY.html
@@ -4,3 +4,4 @@
 <td><div class="regDataNum">%bind(:2)</div></td>
 <td><div class="regDataLabel">%bind(:6):</div></td>
 <td><div class="regDataNum">%bind(:3)</div></td>
+%bind(:7)
