--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_LIST_BODY.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_LIST_BODY.html
@@ -2,5 +2,5 @@
 	<td>%bind(:1)</td>
     <td>%bind(:2)</td>
     <td>%bind(:3)</td>
-    <td style="color:#090">%bind(:4)</td>
-</tr>
+    <td>%bind(:4)</td>
+</tr> 
