--- a/src/main/resources/html/TZEventsBundle/TZ_GD_EVENT_APPLY_BTN.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_GD_EVENT_APPLY_BTN.html
@@ -1,2 +1,2 @@
-<td><a href="javascript:void(0);" class="onlineReg"
-	onclick="tz_apply_click_to_signin_action2('%bind(:1)')">%bind(:2)</a></td>
+<td><a href="javascript:void(0);" class="onlineReg %bind(:3)"
+	onclick="tz_apply_click_to_signin_action2(this,'%bind(:1)')">%bind(:2)</a></td>
