--- a/src/main/resources/html/TZEventsBundle/TZ_GD_EVENT_CANCEL_BTN.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_GD_EVENT_CANCEL_BTN.html
@@ -1,2 +1,2 @@
-<td><a href="javascript:void(0);" class="onlineReg"
-	onclick="tz_apply_click_to_cancel_reg('%bind(:1)')">%bind(:2)</a></td>
+<td><a href="javascript:void(0);" class="onlineReg %bind(:3)"
+	onclick="tz_apply_click_to_cancel_reg(this,'%bind(:1)')">%bind(:2)</a></td>
