--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_DISPLAY_A.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_DISPLAY_A.html
@@ -1,1 +1,1 @@
-<a href="javascript:void(0);" onclick="tz_apply_click_to_signin_action2('%bind(:1)')">%bind(:2)</a>
+<a href="javascript:void(0);" onclick="tz_apply_click_to_signin_action2(this,'%bind(:1)')">%bind(:2)</a>
