--- a/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_MNATIONAL_SELECT.html
@@ -87,6 +87,7 @@ var tzGeneralURL = "%bind(:1)";
 			$("#" + clickId).html(countryDesc);
 			$("#TZ_SCH_CNAME_Country").val(countryDesc);
 			$("#TZ_SCH_CNAME_Country").css("color","#333");
+			$("#TZ_SCH_CNAME_Country").attr("ccode",countryCode);
 			console.log("#TZ_SCH_CNAME_Country_1");
 			console.log(countryDesc);
 			
