参考资料修改

--- a/src/main/resources/html/TZReferenceMaterialBundle/TZ_REF_MATERAL_MAIN_HTML.html
+++ b/src/main/resources/html/TZReferenceMaterialBundle/TZ_REF_MATERAL_MAIN_HTML.html
@@ -13,15 +13,15 @@ body{
 	height: 100%; 
 }
 .ref-material-container{
-	width:100%;
+	width:800px;
 	height:auto;
 	font-family: 'Microsoft YaHei';
 	color: #333;
 	font-size: 14px;
 } 
 .score-process{
-	min-height: 95px;
-}
+	min-height: 85px;
+} 
 .score-process .header,.stu-appinfo .header{
 	height: 35px;
 	line-height: 35px;
@@ -31,7 +31,7 @@ body{
 	font-weight: bold;
 }
 .score-process .content{
-	padding: 10px 5px;
+	padding: 5px;
 } 
 .score-process .score-label{
 	display: inline-block;
@@ -41,7 +41,7 @@ body{
 	border-radius: 5px;
 }
 .stu-appinfo .content{
-	height:500px;
+	height:400px;
 }
 </style>
 <script>
