--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
@@ -87,7 +87,7 @@ $(function(){
 	</div>
   		<!-- evaluation main start -->
 		<div id="tz_evaluation_main" style="overflow-x:hidden;margin:0px;position:relative">
-			<div id="tz_zlps_loading" style="height:auto;width:100%;overflow:hidden;z-index:1600;background-color:#F4F4EC;position:absolute;bottom:40px;">
+			<div id="tz_zlps_loading" style="height:auto;width:100%;overflow:hidden;z-index:1600;background-color:#F4F4EC;position:absolute;bottom:0;">
 				<div style="margin:auto; width:100%;height: 100%; margin-top:20%;text-align:center;font-size:25px;font-family:Microsoft Yahei;">	
 					<p>欢迎登录清华经管学院MBA材料评审系统，数据加载中，请稍候……</p>
 				</div>
@@ -107,7 +107,7 @@ $(function(){
 							</div>
 						</td>
 						<td align="center" valign="top">
-							<div id="tz_zlps_zym" tztype="page" style="background-color:#F4F4EC;z-index:1200;list-style:none;width:100%;min-height:480px;float:left;overflow-x:hidden">
+							<div id="tz_zlps_zym" tztype="page" style="background-color:#F4F4EC;z-index:1200;list-style:none;width:100%;min-height:500pxpx;float:left;overflow-x:hidden">
 								<table width="100%">
 									<tr>
 										<td>
@@ -122,7 +122,7 @@ $(function(){
 							</div>
 						</td>
 						<td align="center" valign="top" style="width:1349px;">
-							<div id="tz_zlps_dfym" tztype="page" style="background-color:#F4F4EC;z-index:1000;list-style:none;width:100%;min-height:480px;float:left;overflow-x:hidden">
+							<div id="tz_zlps_dfym" tztype="page" style="background-color:#F4F4EC;z-index:1000;list-style:none;width:100%;min-height:500px;float:left;overflow-x:hidden">
 								<table width="100%">
 									<tr>
 										<td>
