--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_LOGIN.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_LOGIN.html
@@ -16,17 +16,16 @@
 <script type="text/javascript" src="%bind(:1)/statics/js/tranzvision/util/checkExplorer.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/evaluation/interview/login.js"></script>
 </head>
-<body style="background:#eee"><div id="all">
-  
+<body style="background:#eee">  
   <!-- content start -->
   <div class="main">    
 	<form action="" method="post" enctype="multipart/form-data" name="Loginform" id="Loginform">
 		<div class="login_bg">
 			<div class="login_body">
-				<img src="../../statics/images/evaluation/login_interview_top.png">
-				<div class="main_body">
+				<img src="../../statics/images/evaluation/login_top.png">
+				<div class="main_body2">
 					<div class="main_login">
-						<p>请登录</p>
+						<p style="color:#4e5c8c;">面试评委 请登录</p>
 						<div class="login_number">
 							<span class="text_in">账 &nbsp;&nbsp;号：</span>
 							<input id="userName" name="userName" class="number_input" type="text">
@@ -45,16 +44,19 @@
                         <div id="errormsg" style="display:none;" class="tips_error"><span></span></div>
 						<a href="javascript:void(0)" class="login_btn" id="submitbtn">登录</a>
 					</div>
+					<div class="tips_index" >
+		 				<p style="color:#fff;">本系统正在试运行，如遇问题请联系MBA教育中心招生推广部：</p>
+		 				<p style="color:#fff;">Tel：010-62781848</p>
+		 				<p style="color:#fff;">Mail：mbaadmissions@sem.tsinghua.edu.cn</p>
+	 				</div>
 				</div>
 			</div>
 		</div>
 	</form>
   </div>
 	<!-- content end --> 
-	<div class="clear"></div>
-	<!-- foot start -->
 	<div id="footarea" class="footer assdiv" area-add="false" area-edit="true" area-del="false" area-copy="false" area-moveup="false" area-movedown="false" area-postion="F" area-type="YW" style="background-color:#fff">
   	<p>地址:北京市海淀区清华大学　Copyright © 2017 Tsinghua Sem. All Rights Reserved</p>
     </div>
-</div></body>
+</body>
 </html>
