材料面试评审评委端修改。

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
@@ -30,8 +30,8 @@
 <link rel="stylesheet" type="text/css" href="%bind(:1)/statics/css/kitchensink/theme-simple/resources/KitchenSink-all.css"/>
 <link rel="stylesheet" type="text/css" href="%bind(:1)/statics/js/lib/extjs/packages/ext-theme-simple/build/resources/ext-theme-simple-all.css"/>
 
-<script type="text/javascript" charset="UTF-8" src="%bind(:1)/statics/js/lib/extjs/packages/ext-charts/build/ext-charts-debug.js"></script>
-<link rel="stylesheet" type="text/css" href="%bind(:1)/statics/js/lib/extjs/packages/ext-charts/build/ext-charts-all-debug.scss"/>
+<script type="text/javascript" charset="UTF-8" src="%bind(:1)/statics/js/lib/extjs/packages/ext-charts/build/ext-charts.js"></script>
+<link rel="stylesheet" type="text/css" href="%bind(:1)/statics/js/lib/extjs/packages/ext-charts/build/resources/ext-charts-all.css"/>
 
 <script type="text/javascript" src="%bind(:1)/statics/js/evaluation/interview/evaluation-detail.js" charset="utf-8"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/evaluation/interview/batch-list.js" charset="utf-8"></script>
