材料面试评审评委端修改。

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
@@ -80,6 +80,7 @@ $(function(){
            	<li class="fa fa-user">&nbsp;欢迎%bind(:4)登录清华经管学院MBA材料评审系统</li>
            	<li style="float:right;">
            		<a class="fa fa-home" style="margin-right:5px;color:white;" href="javascript:topMenuHomePage()">&nbsp;首页</a>
+           		<a class="fa fa-phone" style="margin-left:5px;margin-right:5px;color:white;" href="%bind(:5)" target="_blank">&nbsp;联系方式</a>
            		<a class="fa fa-edit" style="margin-left:5px;margin-right:5px;color:white;" href="javascript:changePassword()">&nbsp;修改密码</a>
            		<a class="fa fa-sign-out" style="margin-left:5px;color:white;" href="../logout?type=material">&nbsp;退出</a>
            	</li>
