--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
@@ -64,18 +64,6 @@ Ext.onReady(function(){
 		
 		initializeEvaluateSystem(urlObject);
 	}
-	/*var urlObject = {};
-						
-		urlObject['getBatchListUrl'] = '/psc/ALTZDEV/EMPLOYEE/CRM/s/WEBLIB_TZ_PSXT.TZ_MS_PS.FieldFormula.IScript_ReadPSPCList?languageCd=ZHS';
-		urlObject['getBatchDataUrl'] = '/psc/ALTZDEV/EMPLOYEE/CRM/s/WEBLIB_TZ_PSXT.TZ_MS_PS.FieldFormula.IScript_ReadPWMPData?languageCd=ZHS';
-		urlObject['getNextApplicantUrl'] = '/psc/ALTZDEV/EMPLOYEE/CRM/s/WEBLIB_TZ_PSXT.TZ_MS_PS.FieldFormula.IScript_SubmitKSHEvaluateData?languageCd=ZHS';
-		urlObject['getApplicantDataUrl'] = '/psc/ALTZDEV/EMPLOYEE/CRM/s/WEBLIB_TZ_PSXT.TZ_MS_PS.FieldFormula.IScript_ReadKSHEvaluateData?languageCd=ZHS';
-		urlObject['submitApplicantDataUrl'] = '/psc/ALTZDEV/EMPLOYEE/CRM/s/WEBLIB_TZ_PSXT.TZ_MS_PS.FieldFormula.IScript_SubmitKSHEvaluateData?languageCd=ZHS';
-		urlObject['printStatisticsTableUrl'] = '/psc/ALTZDEV/EMPLOYEE/CRM/s/WEBLIB_TZ_MSPRT.TZ_DYPFZB.FieldFormula.IScript_Printreport';
-		urlObject['getAddDelOneKsDataUrl'] = '/psc/ALTZDEV/EMPLOYEE/CRM/s/WEBLIB_TZ_PSXT.TZ_MS_PS.FieldFormula.IScript_SearchKSHData?languageCd=ZHS';
-		urlObject['checkPWAccStateURL'] = '/psc/ALTZDEV/EMPLOYEE/CRM/s/WEBLIB_TZ_PSXT.TZ_MS_PS.FieldFormula.IScript_CheckPWState?languageCd=ZHS';
-		initializeEvaluateSystem(urlObject);
-	*/
 })
 $(function(){
 	$("#tz_evaluation_main").height(Ext.getBody().getHeight()-58-37);
@@ -92,6 +80,7 @@ $(function(){
            	<li class="fa fa-user">&nbsp;欢迎%bind(:4)登录清华经管学院MBA面试评审系统</li>
            	<li style="float:right;">
            		<a class="fa fa-home" style="margin-right:5px;color:white;" href="javascript:topMenuHomePage()">&nbsp;首页</a>
+           		<a class="fa fa-phone" style="margin-left:5px;margin-right:5px;color:white;" href="%bind(:5)" target="_blank">&nbsp;联系方式</a>
            		<a class="fa fa-edit" style="margin-left:5px;margin-right:5px;color:white;" href="javascript:changePassword()">&nbsp;修改密码</a>
            		<a class="fa fa-sign-out" style="margin-left:5px;color:white;" href="../logout?type=interview">&nbsp;退出</a>
            	</li>
