报名表修改

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -289,7 +289,7 @@
 								$("#app_submit").attr("readOnly","readOnly");
 								$("#app_submit").attr("disabled","disabled");
 								$("#app_submit_div").css("background-color","#999");
-								if(pageno==0||pageno==1||pageno== pagelen){
+								if(pageno== pagelen){
 									$("#app_submit").show();
 									$("#app_state").show();
 								}else{
@@ -446,7 +446,7 @@
 							$("#app_submit").attr("readOnly","readOnly");
 							$("#app_submit").attr("disabled","disabled");
 							$("#app_submit_div").css("background-color","#999");
-							if(pageno==0||pageno==1||pageno== pagelen){
+							if(pageno== pagelen){
 								$("#app_submit").show();
 								$("#app_state").show();
 							}else{
