报名表横版纵版设置

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -31,7 +31,7 @@
 		href="%bind(:32)/statics/css/appeditor/registration-public.css"
 		type="text/css" />
 	<link rel="stylesheet"
-		href="%bind(:32)/statics/css/appeditor/registration-page.css"
+		href="%bind(:32)/statics/css/appeditor/registration-%bind(:55)page.css"
 		type="text/css" />
 	<style>
 .input-list-info, .input-list-info-blank { %bind(:33)
