--- a/src/main/resources/html/TZApplicationTemplateBundle/TZ_ONLINE_VIEW_HTML.html
+++ b/src/main/resources/html/TZApplicationTemplateBundle/TZ_ONLINE_VIEW_HTML.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="%bind(:1)/statics/js/lib/fancyBox/jquery.fancybox.css" type="text/css" />
 		<link rel="stylesheet" href="%bind(:1)/statics/js/lib/fancyBox/jquery.fancybox-thumbs.css" type="text/css" />
 		<link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/registration-public.css" type="text/css"/>
-		<link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/registration-page.css" type="text/css"/>
+		<link rel="stylesheet" href="%bind(:1)/statics/css/appeditor/registration-%bind(:21)page.css" type="text/css"/>
 
 		<script type="text/javascript">
 			var TzUniversityContextPath = "%bind(:1)";
