自动初筛优化修改

--- a/src/main/resources/html/TZReferenceMaterialBundle/TZ_REF_APP_FORM_HTML.html
+++ b/src/main/resources/html/TZReferenceMaterialBundle/TZ_REF_APP_FORM_HTML.html
@@ -1489,7 +1489,7 @@
 	<!--头部内容开始-->
 	
 	<!--  <div class="reg-top" id="header">%bind(:23)</div>-->
-	<div id="headarea" class="top assdiv" area-add="false" area-edit="true" area-del="false" area-copy="false" area-moveup="false" area-movedown="false" area-postion="H" area-type="YT" area-id=""> 
+	<div id="headarea" class="top assdiv" area-add="false" area-edit="true" area-del="false" area-copy="false" area-moveup="false" area-movedown="false" area-postion="H" area-type="YT" area-id="" style="display: none;"> 
     
    </div> 
 	<!--头部内容结束-->
