--- a/src/main/resources/html/TZApplicationTemplateBundle/TZ_TABS_DIV.html
+++ b/src/main/resources/html/TZApplicationTemplateBundle/TZ_TABS_DIV.html
@@ -1,4 +1,4 @@
-<li class="%bind(:1)" id="%bind(:4)">
+<li class="%bind(:1)" id="%bind(:4)" style="%bind(:5)">
 	%bind(:2)
 	%bind(:3)
 	<div class="clear"></div>
