--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
@@ -77,12 +77,12 @@ $(function(){
   <div class="main" style="height:100%">
   	<div class="top_main">
            <ul>
-           	<li class="fa fa-user">&nbsp;欢迎%bind(:4)登录清华经管学院MBA面试评审系统</li>
+           	<li><span class="fa fa-user"></span>&nbsp;欢迎%bind(:4)登录清华经管学院MBA面试评审系统</li>
            	<li style="float:right;">
-           		<a class="fa fa-home" style="margin-right:5px;color:white;" href="javascript:topMenuHomePage()">&nbsp;首页</a>
-           		<a class="fa fa-phone" style="margin-left:5px;margin-right:5px;color:white;" href="%bind(:5)" target="_blank">&nbsp;联系方式</a>
-           		<a class="fa fa-edit" style="margin-left:5px;margin-right:5px;color:white;" href="javascript:changePassword()">&nbsp;修改密码</a>
-           		<a class="fa fa-sign-out" style="margin-left:5px;color:white;" href="../logout?type=interview">&nbsp;退出</a>
+           		<a style="margin-right:5px;color:white;" href="javascript:topMenuHomePage()"><span class="fa fa-home"></span>&nbsp;首页</a>
+           		<a style="margin-left:5px;margin-right:5px;color:white;" href="%bind(:5)" target="_blank"><span class="fa fa-phone"></span>&nbsp;联系方式</a>
+           		<a style="margin-left:5px;margin-right:5px;color:white;" href="javascript:changePassword()"><span class="fa fa-edit"></span>&nbsp;修改密码</a>
+           		<a style="margin-left:5px;color:white;" href="../logout?type=interview"><span class="fa fa-sign-out"></span>&nbsp;退出</a>
            	</li>
            </ul>           
 	</div>
