清华MBA手机版报考系统OPENID绑定登录修改

--- a/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
+++ b/src/main/resources/html/TZSitePageBundle/TzSemMLoginRelease.html
@@ -17,6 +17,7 @@
 	var TzUniversityContextPath = "%bind(:1)";
 	var TZ_GD_LOGIN_SITEI_ORG_CODE = "%bind(:2)";
 	var TZ_GD_LOGIN_SITEI_ID = "%bind(:3)";
+	var TZ_WECHART_OPENID = "%bind(:4)";
 	var TZ_GD_SITEI_ISD = "";
 </script>
 <script>
@@ -72,6 +73,7 @@
             <input id="pagetype" name="pagetype" value="loginpage" type="hidden">
             <input id="jgid" name="jgid" type="hidden" value="%bind(:2)">
             <input id="siteid" name="siteid" type="hidden" value="%bind(:3)">
+            <input id="openid" name="openid" type="hidden" value="%bind(:4)">
             <input id="lang" name="lang" type="hidden" value="ZHS">
             <input id="operator" name="operator" value="R" type="hidden"> 
             </form>
