清华MBA招生网站首页报考日历地点样式修改
Signed-off-by: 琚峰 <jufeng@tranzvision.com.cn>

--- a/src/main/resources/html/TZWebSiteAreaInfoBundle/TZ_SITE_AREA_BKRL_LI_HTML.html
+++ b/src/main/resources/html/TZWebSiteAreaInfoBundle/TZ_SITE_AREA_BKRL_LI_HTML.html
@@ -6,5 +6,5 @@
 		<a class="date_body" href="%bind(:1)" target="_blank" style="overflow: hidden; text-overflow: ellipsis; -webkit-box-orient: vertical; display: -webkit-box; -webkit-line-clamp: 2;">
 			%bind(:4)
 		</a>
-	    <div class="location"><i></i><span>%bind(:5)</span></div>
+	    <div class="location"><i></i><li style="margin-left: 25px;">%bind(:5)</li></div>
 </li>
