手机版已报名活动修改

--- a/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_MY_ACTIVITY_DIV.html
+++ b/src/main/resources/html/TZMobileWebsiteIndexBundle/TZ_M_MY_ACTIVITY_DIV.html
@@ -12,9 +12,13 @@
 	   	 					<i></i>
 	   	 					<span>%bind(:4)</span>
 	   	 				</div>
+	   	 				<div class="status_left">
+	   	 					<i></i>
+	   	 					<span>%bind(:7)</span>
+	   	 				</div>
 	   	 			</div>
-	   	 			<div class="ac_right">
-	   	 				<a href="javascript:void(0);" onclick='revokeActivity("%bind(:5)","%bind(:6)")'>撤销</a>
+	   	 			<div class="ac_right"> 
+	   	 				<a href="javascript:void(0);" class="%bind(:8)" onclick='revokeActivity("%bind(:5)","%bind(:6)",this)'>撤销</a>
 	   	 			</div>
 	   	 		</div>
 	   	 	</div>
