材料面试评审评委端修改。

--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
@@ -18,6 +18,7 @@
 	var ContextPath = "%bind(:1)";
 	var OrgCode = "%bind(:2)";
 	var TimeOut = %bind(:3);
+	var EvaluationDescriptionUrl = %bind(:6);
 </script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/extjs/bootstrap.js"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/lib/extjs/ext-lang-zh_CN.js"></script>
@@ -102,6 +103,7 @@ $(function(){
 									<tr>
 										<td align="center" valign="top">
 											<div id="tz_zlps_pclb_a" style="vertical-align:middle"></div>
+											<div id="tz_zlps_description" style="vertical-align:middle"></div>
 										</td>
 									</tr>
 								</table>
