--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_METERIAL_EVALUATION_INDEX.html
@@ -34,6 +34,7 @@
 <script type="text/javascript" charset="UTF-8" src="%bind(:1)/statics/js/lib/extjs/packages/ext-charts/build/ext-charts.js"></script>
 <link rel="stylesheet" type="text/css" href="%bind(:1)/statics/js/lib/extjs/packages/ext-charts/build/resources/ext-charts-all.css"/>
 
+<script type="text/javascript" src="%bind(:1)/statics/js/evaluation/tzShowTips.js" charset="utf-8"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/evaluation/material/evaluation-detail.js" charset="utf-8"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/evaluation/material/batch-list.js" charset="utf-8"></script>
 <script type="text/javascript" src="%bind(:1)/statics/js/evaluation/material/main-evaluation.js" charset="utf-8"></script>
