--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PWD_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PWD_HTML.html
@@ -1,3 +1,5 @@
+<script type="text/javascript" src="%bind(:3)/statics/js/website/dealing/dealing1.js">
+</script>		
 <div id="mask" class="mask" style="display:none;">
 </div>
 	<div id="inpwd" class="regmain-con right" style="display:none;margin: 0 auto; float: none;z-index: 999999;position: absolute;top: 10%;left: 50%;margin-left:-464px;background-color:#fff">
@@ -13,7 +15,9 @@
 				<div id="pwdTip"
 					style="margin: 0px; padding: 0px; background: transparent none repeat scroll 0% 0%;"
 					class="onShow">
-					<div class="onShow" tips="">&nbsp;</div>
+					<!-- 忘记密码 -->
+					<div class="onShow" tips=""><a href="javascript:void(0)" style="font-size:16px;color:red" id="forgetPassV">%bind(:4)</a><input id="cssPath"  type="hidden" value="page_stylecss"/></div>
+				
 				</div>
 			</div>
 			<div class="clear"></div>
