参考资料显示修改

--- a/src/main/resources/html/TZReferenceMaterialBundle/TZ_REF_APP_FORM_HTML.html
+++ b/src/main/resources/html/TZReferenceMaterialBundle/TZ_REF_APP_FORM_HTML.html
@@ -1561,7 +1561,7 @@
 	<!--底部结束-->
 
 	<!--侧滑内容开始-->
-	<div class="sideslip" id="backindex">
+	<div class="sideslip" id="backindex" style="display:none;">
 		<a href="javascript:void(0);"
 			onclick='backToHome("%bind(:10)","%bind(:11)");'><img
 			src="%bind(:32)/statics/images/appeditor/new/backindex.png" /></a>
