--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
@@ -68,7 +68,7 @@ Ext.onReady(function(){
 })
 $(function(){
 	$("#tz_evaluation_main").height(Ext.getBody().getHeight()-58-37);
-	$("#tz_msps_container").width(Ext.getBody().getWidth()*3);
+	$("#tz_msps_container").width(Ext.getBody().getWidth()*3); 
 });
 </script>
 </head>
@@ -88,7 +88,7 @@ $(function(){
            </ul>           
 	</div>
   		<!-- evaluation main start -->
-		<div id="tz_evaluation_main" style="height:auto;overflow-x:hidden;margin:0px;position:relative">
+		<div id="tz_evaluation_main" style="overflow-x:hidden;margin:0px;position:relative">
 			<div id="tz_msps_loading" style="height:auto;width:100%;overflow:hidden;z-index:1600;background-color:#F4F4EC;position:absolute;bottom:40px;">
 				<div style="margin:auto; width:100%;height: 100%; text-align:center;line-height:500px;font-size:25px;font-family:Microsoft Yahei;">	
 					<p>欢迎登录清华经管学院MBA面试评审系统，数据加载中，请稍候……</p>
@@ -139,12 +139,13 @@ $(function(){
 			</div>
 		</div>
 		<!-- evaluation main end -->
-  </div>
-	<!-- content end --> 
-	<div class="clear"></div>
-	<!-- foot start -->
-	<div id="footarea" class="footer assdiv" style="background-color:#fff;position:absolute;bottom:0;left:0">
-  	<p>地址:北京市海淀区清华大学　Copyright © 2017 Tsinghua Sem. All Rights Reserved</p>
+  
+		<!-- content end --> 
+		<div class="clear"></div>
+		<!-- foot start -->
+		<div id="footarea" class="footer assdiv" style="background-color:#fff;/*position:absolute;bottom:0;left:0*/">
+	  	<p>地址:北京市海淀区清华大学　Copyright © 2017 Tsinghua Sem. All Rights Reserved</p>
+    	</div>
     </div>
 </div></body>
 </html>
