--- a/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
+++ b/src/main/resources/html/TZEvaluationSystemBundle/TZ_INTERVIEW_EVALUATION_INDEX.html
@@ -88,20 +88,20 @@ $(function(){
            </ul>           
 	</div>
   		<!-- evaluation main start -->
-		<div id="tz_evaluation_main" style="height:auto;overflow-x:hidden;margin:0px;position:relative">
+		<div id="tz_evaluation_main" style="overflow-x:hidden;margin:0px;position:relative">
 			<div id="tz_msps_loading" style="height:auto;width:100%;overflow:hidden;z-index:1600;background-color:#F4F4EC;position:absolute;bottom:40px;">
 				<div style="margin:auto; width:100%;height: 100%; text-align:center;line-height:500px;font-size:25px;font-family:Microsoft Yahei;">	
 					<p>欢迎登录清华经管学院MBA面试评审系统，数据加载中，请稍候……</p>
 				</div>
 			</div>
-			<div id="tz_msps_container" style="width: 5050px;height:100%;min-height:500px;position:relative;overflow:hidden">
-				<table width="100%" height="100%" style="background-color:#F4F4EC">
+			<div id="tz_msps_container" style="width: 5050px;height:100%;position:relative;overflow:hidden">
+				<table style="background-color:#F4F4EC;width:100%;height:100%">
 					<tr>
 						<td align="center" valign="top">
 							<div id="tz_msps_pclb" tztype="page" style="background-color:#F4F4EC;z-index:1400;list-style:none;width:100%;min-height:480px;float:left;overflow-x:hidden">
-								<table width="100%" height="100%">
-									<tr>
-										<td align="center" valign="top">
+								<table style="width:100%;height:100%">
+									<tr style="width:100%;height:100%">
+										<td align="center" valign="top" style="width:100%;height:100%">
 											<div id="tz_msps_pclb_a" style="vertical-align:middle"></div>
 										</td>
 									</tr>
@@ -143,7 +143,7 @@ $(function(){
 	<!-- content end --> 
 	<div class="clear"></div>
 	<!-- foot start -->
-	<div id="footarea" class="footer assdiv" style="background-color:#fff;position:absolute;bottom:0;left:0">
+	<div id="footarea" class="footer assdiv" style="background-color:#fff;">
   	<p>地址:北京市海淀区清华大学　Copyright © 2017 Tsinghua Sem. All Rights Reserved</p>
     </div>
 </div></body>
